--- a/src/templates/R/03_csr.html
+++ b/src/templates/R/03_csr.html
@@ -35,12 +35,8 @@
             <p class="mb-2">{{T0006}}</p>
             <p class="mb-2">{{T0007}}</p>
 
-            <div class="divclass mt-12">
-                <div>{{T0008}}. {{T0009}}</div>
-                <div>
-                    <input type="text" id="q1" name="q1" class="inputclass w-full" />
-                </div>
-            </div>
+            <input type="hidden" id="q1" name="q1" />
+
             <div class="divclass mt-6">
                 <div>{{T0010}}. {{T0011}}</div>
                 <div>
@@ -121,20 +117,9 @@
                     </select>
                 </div>
             </div>
-            <div class="divclass mt-6">
-                <div>I4d. {{T0176}}</div>
-                <div>
-                    <select id="i4d" name="i4d" class="selectclass">
-                        <option value="{{i4d-1}}">{{T0177}}</option>
-                        <option value="{{i4d-2}}">{{T0178}}</option>
-                        <option value="{{i4d-3}}">{{T0179}}</option>
-                        <option value="{{i4d-4}}">{{T0180}}</option>
-                        <option value="{{i4d-5}}">{{T0181}}</option>
-                        <option value="{{i4d-6}}">{{T0182}}</option>
-                        <option value="{{i4d-7}}">{{T0183}}</option>
-                    </select>
-                </div>
-            </div>
+
+            <input type="hidden" id="i4d" name="i4d" />
+
             <div class="divclass mt-6">
                 <div>{{T0035}}. {{T0036}}</div>
                 <div>
