--- a/src/templates/R/03_csr.html
+++ b/src/templates/R/03_csr.html
@@ -125,7 +125,7 @@
                 <div>
                     <select id="i5" name="i5" class="selectclass">
                         <option value="--">--</option>
-                        <option value="{{i5-1}}">{{T0188}}</option>
+                        <option value="{{i5-1}}">{{T0202}}</option>
                         <option value="{{i5-2}}">{{T0189}}</option>
                         <option value="{{i5-3}}">{{T0190}}</option>
                         <option value="{{i5-4}}">{{T0191}}</option>
@@ -152,7 +152,7 @@
 
             <div class="divclass mt-10">
                 <div>{{T0052}}. {{T0053}}</div>
-                <div class="divclass4">
+                <div class="div4class">
                     <div class="flex items-center gap-4">
                         <input type="text" id="j2" name="j2" class="inputclass w-full" />
                     </div>
@@ -194,7 +194,7 @@
 
             <div class="divclass mt-10">
                 <div>{{T0063}}. {{T0064}}</div>
-                <div class="divclass4">
+                <div class="div4class">
                     <div class="flex items-center">
                         <input id="j4-1" type="radio" value="{{j4-1}}" name="j4" class="valueclass">
                         <label for="j4-1" class="labelclass">{{T0065}}</label>
@@ -302,7 +302,7 @@
 
             <div class="divclass mt-10">
                 <div>{{T0101}}. {{T0102}}</div>
-                <div class="divclass4">
+                <div class="div4class">
                     <div class="flex items-center">
                         <input id="e3-1" type="radio" value="{{e3-1}}" name="e3" class="valueclass">
                         <label for="e3-1" class="labelclass">{{T0103}}</label>
@@ -439,7 +439,7 @@
 
             <div class="divclass mt-10">
                 <div>{{T0135}}. {{T0136}}</div>
-                <div class="divclass4">
+                <div class="div4class">
                     <div class="flex items-center">
                         <input id="e10-1" type="radio" value="{{e10-1}}" name="e10" class="valueclass">
                         <label for="e10-1" class="labelclass">{{T0137}}</label>
@@ -453,7 +453,7 @@
 
             <div class="divclass mt-10">
                 <div>{{T0139}}. {{T0140}}</div>
-                <div class="divclass4">
+                <div class="div4class">
                     <div class="flex items-center">
                         <input id="e11-1" type="radio" value="{{e11-1}}" name="e11" class="valueclass">
                         <label for="e11-1" class="labelclass">{{T0141}}</label>
@@ -467,7 +467,7 @@
 
             <div class="divclass mt-10">
                 <div>{{T0143}}. {{T0144}}</div>
-                <div class="divclass4">
+                <div class="div4class">
                     <div class="flex items-center">
                         <input id="e12-1" type="radio" value="{{e12-1}}" name="e12" class="valueclass">
                         <label for="e12-1" class="labelclass">{{T0145}}</label>
@@ -481,7 +481,7 @@
 
             <div class="divclass mt-10">
                 <div>{{T0147}}. {{T0148}}</div>
-                <div class="divclass4">
+                <div class="div4class">
                     <div class="flex items-center">
                         <input id="e13-1" type="radio" value="{{e13-1}}" name="e13" class="valueclass">
                         <label for="e13-1" class="labelclass">{{T0149}}</label>
@@ -510,7 +510,7 @@
 
             <div class="divclass mt-10">
                 <div>{{T0156}}. {{T0157}}</div>
-                <div class="divclass4">
+                <div class="div4class">
                     <div class="flex items-center">
                         <input id="e16-1" type="radio" value="{{e16-1}}" name="e16" class="valueclass">
                         <label for="e16-1" class="labelclass">{{T0158}}</label>
@@ -524,7 +524,7 @@
 
             <div class="divclass mt-10">
                 <div>{{T0160}}. {{T0161}}</div>
-                <div class="divclass4">
+                <div class="div4class">
                     <div class="flex items-center">
                         <input id="e17-1" type="radio" value="{{e17-1}}" name="e17" class="valueclass">
                         <label for="e17-1" class="labelclass">{{T0162}}</label>
@@ -538,7 +538,7 @@
 
             <div class="divclass mt-10">
                 <div>{{T0164}}. {{T0165}}</div>
-                <div class="divclass4">
+                <div class="div4class">
                     <div class="flex items-center">
                         <input id="e18-1" type="radio" value="{{e18-1}}" name="e18" class="valueclass">
                         <label for="e18-1" class="labelclass">{{T0166}}</label>
@@ -551,7 +551,7 @@
             </div>
 
             <div class="grid mt-10">
-                <label for="obs">{{T0186}}. {{T0187}}</label>
+                <label for="obs">{{T0186}}. {{T0083}}</label>
                 <textarea class="form-control" rows="3" id="obs" name="obs"></textarea>
             </div>
 
