--- a/src/templates/R/05_yplcs.html
+++ b/src/templates/R/05_yplcs.html
@@ -989,7 +989,7 @@
                 <div>
                     {{T0284}}. {{T0285}}
                 </div>
-                <div class="divclass4">
+                <div class="div4class">
                     <div class="flex items-center">
                         <input id="ee12_dk" type="checkbox" name="ee12_dk" value="{{ee12_dk-1}}" class="cbclass">
                         <label for="ee12_dk" class="labelclass">{{T0287}}</label>
