--- a/src/templates/R/08_pfq.html
+++ b/src/templates/R/08_pfq.html
@@ -954,7 +954,7 @@
 
             <div class="divclass mt-10">
                 <div>{{T0142}}. {{T0143}}</div>
-                <div class="divclass4">
+                <div class="div4class">
                     <div class="flex items-center">
                         <input id="ex1-1" type="radio" value="{{ex1-1}}" name="ex1" class="valueclass">
                         <label for="ex1-1" class="labelclass">{{T0144}}</label>
@@ -1453,7 +1453,7 @@
 
             <div class="divclass mt-10">
                 <div>{{T0183}}. {{T0184}}</div>
-                <div class="divclass4">
+                <div class="div4class">
                     <div class="flex items-center">
                         <input id="qs1-1" type="radio" value="{{qs1-1}}" name="qs1" class="valueclass">
                         <label for="qs1-1" class="labelclass">{{T0185}}</label>
@@ -1486,7 +1486,7 @@
 
             <div class="divclass mt-10">
                 <div>{{T0195}}. {{T0196}}</div>
-                <div class="divclass4">
+                <div class="div4class">
                     <div class="flex items-center">
                         <input id="qs3-1" type="radio" value="{{qs3-1}}" name="qs3" class="valueclass">
                         <label for="qs3-1" class="labelclass">{{T0197}}</label>
@@ -1499,7 +1499,7 @@
             </div>
             <div class="divclass mt-10">
                 <div>{{T0199}}. {{T0200}}</div>
-                <div class="divclass4">
+                <div class="div4class">
                     <div class="flex items-center">
                         <input id="qs4-1" type="radio" value="{{qs4-1}}" name="qs4" class="valueclass">
                         <label for="qs4-1" class="labelclass">{{T0201}}</label>
@@ -1512,7 +1512,7 @@
             </div>
             <div class="divclass mt-10">
                 <div>{{T0203}}. {{T0204}}</div>
-                <div class="divclass4">
+                <div class="div4class">
                     <div class="flex items-center">
                         <input id="qs5-1" type="radio" value="{{qs5-1}}" name="qs5" class="valueclass">
                         <label for="qs5-1" class="labelclass">{{T0205}}</label>
@@ -1525,7 +1525,7 @@
             </div>
             <div class="divclass mt-10">
                 <div>{{T0207}}. {{T0208}}</div>
-                <div class="divclass4">
+                <div class="div4class">
                     <div class="flex items-center">
                         <input id="qs6-1" type="radio" value="{{qs6-1}}" name="qs6" class="valueclass">
                         <label for="qs6-1" class="labelclass">{{T0209}}</label>
@@ -1538,7 +1538,7 @@
             </div>
             <div class="divclass mt-10">
                 <div>{{T0211}}. {{T0212}}</div>
-                <div class="divclass4">
+                <div class="div4class">
                     <div class="flex items-center">
                         <input id="qs7-1" type="radio" value="{{qs7-1}}" name="qs7" class="valueclass">
                         <label for="qs7-1" class="labelclass">{{T0213}}</label>
@@ -1551,7 +1551,7 @@
             </div>
             <div class="divclass mt-10">
                 <div>{{T0215}}. {{T0216}}</div>
-                <div class="divclass4">
+                <div class="div4class">
                     <div class="flex items-center">
                         <input id="qs8-1" type="radio" value="{{qs8-1}}" name="qs8" class="valueclass">
                         <label for="qs8-1" class="labelclass">{{T0217}}</label>
