--- a/src/templates/R/01_cpis.html
+++ b/src/templates/R/01_cpis.html
@@ -5198,6 +5198,20 @@
                 </div>
             </div>
 
+            <div class="divclass mt-10">
+                <div>{{T1167}}. {{T1168}}</div>
+                <div class="col-span-1 flex items-center gap-4">
+                    <div class="flex items-center">
+                        <input type="radio" id="lk22_12-1" name="lk22_12" value="{{lk22_12-1}}" class="valueclass">
+                        <label for="lk22_12-1" class="labelclass">{{T1569}}</label>
+                    </div>
+                    <div class="flex items-center">
+                        <input type="radio" id="lk22_12-2" name="lk22_12" value="{{lk22_12-2}}" class="valueclass">
+                        <label for="lk22_12-2" class="labelclass">{{T1570}}</label>
+                    </div>
+                </div>
+            </div>
+
             <h2 class="h2class">{{T1157}}</h2>
 
             <p>{{T1158}} {{T1159}}</p>
