--- a/src/templates/R/07_ftch.html
+++ b/src/templates/R/07_ftch.html
@@ -159,7 +159,7 @@
 
             <div class="divclass mt-10">
                 <div>{{T0045}}. {{T0046}}</div>
-                <div class="divclass4">
+                <div class="div4class">
                     <div class="flex items-center">
                         <input id="ifp4-1" type="radio" value="{{ifp4-1}}" name="ifp4" class="valueclass">
                         <label for="ifp4-1" class="labelclass">{{T0047}}</label>
@@ -493,7 +493,7 @@
 
             <div class="divclass mt-10">
                 <div class="ml-4">{{T0143}}</div>
-                <div class="divclass4">
+                <div class="div4class">
                     <div class="flex items-center">
                         <input id="fc2a-1" type="radio" value="{{fc2a-1}}" name="fc2a" class="valueclass">
                         <label for="fc2a-1" class="labelclass">{{T0144}}</label>
@@ -506,7 +506,7 @@
             </div>
             <div class="divclass mt-10">
                 <div class="ml-4">{{T0146}}</div>
-                <div class="divclass4">
+                <div class="div4class">
                     <div class="flex items-center">
                         <input id="fc2b-1" type="radio" value="{{fc2b-1}}" name="fc2b" class="valueclass">
                         <label for="fc2b-1" class="labelclass">{{T0147}}</label>
@@ -519,7 +519,7 @@
             </div>
             <div class="divclass mt-10">
                 <div class="ml-4">{{T0149}}</div>
-                <div class="divclass4">
+                <div class="div4class">
                     <div class="flex items-center">
                         <input id="fc2f-1" type="radio" value="{{fc2f-1}}" name="fc2f" class="valueclass">
                         <label for="fc2f-1" class="labelclass">{{T0150}}</label>
@@ -532,7 +532,7 @@
             </div>
             <div class="divclass mt-10">
                 <div class="ml-4">{{T0152}}</div>
-                <div class="divclass4">
+                <div class="div4class">
                     <div class="flex items-center">
                         <input id="fc2c-1" type="radio" value="{{fc2c-1}}" name="fc2c" class="valueclass">
                         <label for="fc2c-1" class="labelclass">{{T0153}}</label>
@@ -545,7 +545,7 @@
             </div>
             <div class="divclass mt-10">
                 <div class="ml-4">{{T0155}}</div>
-                <div class="divclass4">
+                <div class="div4class">
                     <div class="flex items-center">
                         <input id="fc2d-1" type="radio" value="{{fc2d-1}}" name="fc2d" class="valueclass">
                         <label for="fc2d-1" class="labelclass">{{T0156}}</label>
@@ -558,7 +558,7 @@
             </div>
             <div class="divclass mt-10">
                 <div class="ml-4">{{T0158}}</div>
-                <div class="divclass4">
+                <div class="div4class">
                     <div class="flex items-center">
                         <input id="fc2e-1" type="radio" value="{{fc2e-1}}" name="fc2e" class="valueclass">
                         <label for="fc2e-1" class="labelclass">{{T0159}}</label>
@@ -1139,7 +1139,7 @@
 
             <div class="divclass mt-10">
                 <div>{{T0200}}. {{T0201}}</div>
-                <div class="divclass4">
+                <div class="div4class">
                     <div class="flex items-center">
                         <input id="ex1-1" type="radio" value="{{ex1-1}}" name="ex1" class="valueclass">
                         <label for="ex1-1" class="labelclass">{{T0202}}</label>
@@ -1655,7 +1655,7 @@
             </div>
             <div class="divclass mt-10">
                 <div>{{T0238}}. {{T0239}}</div>
-                <div class="divclass4">
+                <div class="div4class">
                     <div class="flex items-center">
                         <input id="qs2-1" type="radio" value="{{qs2-1}}" name="qs2" class="valueclass">
                         <label for="qs2-1" class="labelclass">{{T0240}}</label>
@@ -1668,7 +1668,7 @@
             </div>
             <div class="divclass mt-10">
                 <div>{{T0242}}. {{T0243}}</div>
-                <div class="divclass4">
+                <div class="div4class">
                     <div class="flex items-center">
                         <input id="qs3-1" type="radio" value="{{qs3-1}}" name="qs3" class="valueclass">
                         <label for="qs3-1" class="labelclass">{{T0244}}</label>
@@ -1702,7 +1702,7 @@
 
             <div class="divclass mt-10">
                 <div class="ml-4">{{T0255}}</div>
-                <div class="divclass4">
+                <div class="div4class">
                     <div class="flex items-center">
                         <input id="qs5a-1" type="radio" value="{{qs5a-1}}" name="qs5a" class="valueclass">
                         <label for="qs5a-1" class="labelclass">{{T0256}}</label>
@@ -1715,7 +1715,7 @@
             </div>
             <div class="divclass mt-10">
                 <div class="ml-4">{{T0258}}</div>
-                <div class="divclass4">
+                <div class="div4class">
                     <div class="flex items-center">
                         <input id="qs5b-1" type="radio" value="{{qs5b-1}}" name="qs5b" class="valueclass">
                         <label for="qs5b-1" class="labelclass">{{T0259}}</label>
@@ -1728,7 +1728,7 @@
             </div>
             <div class="divclass mt-10">
                 <div class="ml-4">{{T0261}}</div>
-                <div class="divclass4">
+                <div class="div4class">
                     <div class="flex items-center">
                         <input id="qs5c-1" type="radio" value="{{qs5c-1}}" name="qs5c" class="valueclass">
                         <label for="qs5c-1" class="labelclass">{{T0262}}</label>
@@ -1741,7 +1741,7 @@
             </div>
             <div class="divclass mt-10">
                 <div class="ml-4">{{T0264}}</div>
-                <div class="divclass4">
+                <div class="div4class">
                     <div class="flex items-center">
                         <input id="qs5d-1" type="radio" value="{{qs5d-1}}" name="qs5d" class="valueclass">
                         <label for="qs5d-1" class="labelclass">{{T0265}}</label>
@@ -1754,7 +1754,7 @@
             </div>
             <div class="divclass mt-10">
                 <div>{{T0267}}. {{T0268}}</div>
-                <div class="divclass4">
+                <div class="div4class">
                     <div class="flex items-center">
                         <input id="qs6-1" type="radio" value="{{qs6-1}}" name="qs6" class="valueclass">
                         <label for="qs6-1" class="labelclass">{{T0269}}</label>
