stilurile pentru datapicker

--- a/src/templates/R/05_yplcs.html
+++ b/src/templates/R/05_yplcs.html
@@ -50,12 +50,8 @@
                     </select>
                 </div>
             </div>
-            <div class="divclass mt-6">
-                <div>{{T0011}}. {{T0012}}</div>
-                <div>
-                    <input type="text" id="data" name="data" class="inputclass w-full" />
-                </div>
-            </div>
+
+            <input type="hidden" id="data" name="data" />
 
             <h2 class="h2class">{{T0013}}</h2>
 
