WIP validari si modificari up to i5

--- a/src/templates/R/05_yplcs.html
+++ b/src/templates/R/05_yplcs.html
@@ -279,54 +279,51 @@
             <div class="divclass mt-6">
                 <div>{{T0071}}. {{T0594}}</div>
                 <div class="flex gap-4">
-                    <select id="pi6" name="pi6" class="selectclass">
+                    <select id="pi6i" name="pi6i" class="selectclass">
                         <option value="-9">{{T0597}}</option>
                     </select>
                 </div>
             </div>
 
             <div class="divclass mt-6">
-                <div>{{T0073}}. {{T0595}}</div>
-                <div>
-                    <input type="text" id="pi6a" name="pi6a" class="inputclass w-full" />
-                </div>
-            </div>
-
-            <div class="divclass mt-6">
                 <div>{{T0076}}. {{T0596}}</div>
                 <div>
-                    <input type="text" id="pi6b" name="pi6b" class="inputclass w-full" />
+                    <input type="text" id="pi6n" name="pi6n" class="inputclass w-full" />
                 </div>
             </div>
 
             <div class="divclass mt-6">
                 <div>{{T0079}}. {{T0080}}</div>
                 <div>
-                    <select id="pi6c" name="pi6c" class="selectclass">
-                        <option selected>--</option>
+                    <select id="pi6t" name="pi6t" class="selectclass">
+                        <option value="-9">{{T0597}}</option>
                         <optgroup label="{{T0082}}">
-                            <option value="{{pi6c-1}}">{{T0083}}</option>
-                            <option value="{{pi6c-2}}">{{T0084}}</option>
-                            <option value="{{pi6c-3}}">{{T0085}}</option>
-                            <option value="{{pi6c-4}}">{{T0086}}</option>
+                            <option value="{{pi6t-1}}">{{T0083}}</option>
+                            <option value="{{pi6t-2}}">{{T0084}}</option>
+                            <option value="{{pi6t-3}}">{{T0085}}</option>
+                            <option value="{{pi6t-4}}">{{T0086}}</option>
                         </optgroup>
                         <optgroup label="{{T0087}}">
-                            <option value="{{pi6c-5}}">{{T0088}}</option>
-                            <option value="{{pi6c-6}}">{{T0089}}</option>
-                            <option value="{{pi6c-7}}">{{T0090}}</option>
-                            <option value="{{pi6c-8}}">{{T0091}}</option>
-                            <option value="{{pi6c-9}}">{{T0092}}</option>
-                            <option value="{{pi6c-10}}">{{T0093}}</option>
+                            <option value="{{pi6t-5}}">{{T0088}}</option>
+                            <option value="{{pi6t-6}}">{{T0089}}</option>
+                            <option value="{{pi6t-7}}">{{T0090}}</option>
+                            <option value="{{pi6t-8}}">{{T0091}}</option>
+                            <option value="{{pi6t-9}}">{{T0092}}</option>
+                            <option value="{{pi6t-10}}">{{T0093}}</option>
+                            <option value="{{pi6t-11}}">{{T0600}}</option>
+                            <option value="{{pi6t-12}}">{{T0601}}</option>
                         </optgroup>
                     </select>
                 </div>
             </div>
+
             <div class="divclass mt-6">
                 <div>{{T0094}}. {{T0095}}</div>
                 <div>
                     <input type="text" id="pi7" name="pi7" class="inputclass w-full" />
                 </div>
             </div>
+
             <div class="divclass mt-6">
                 <div>{{T0096}}. {{T0097}}<strong class="underline">{{T0098}}</strong></div>
                 <div>
@@ -2082,6 +2079,11 @@
                 <div class="flex gap-4">
                     <textarea id="cr10" name="cr10" class="inputclass w-full"></textarea>
                 </div>
+            </div>
+
+            <div class="grid mt-10">
+                <label for="obs">{{T0598}}. {{T0599}}</label>
+                <textarea class="form-control" rows="3" id="obs" name="obs"></textarea>
             </div>
 
 
