--- a/src/templates/R/05_yplcs.html
+++ b/src/templates/R/05_yplcs.html
@@ -325,7 +325,7 @@
             </div>
 
             <div class="divclass mt-6">
-                <div>{{T0096}}. {{T0097}}<strong class="underline">{{T0098}}</strong></div>
+                <div>{{T0096}}. {{T0097}} <strong class="underline">{{T0098}}</strong></div>
                 <div>
                     <input type="text" id="pi8" name="pi8" class="inputclass w-full" />
                 </div>
@@ -1125,6 +1125,10 @@
                         <label for="he5_8" class="labelclass">{{T0324}}</label>
                     </div>
                     <textarea id="he5_8_other" name="he5_8_other" class="inputclass w-full"></textarea>
+                    <div class="flex items-center">
+                        <input id="he5_9" type="checkbox" value="{{he5_9-1}}" name="he5_9" class="valueclass">
+                        <label for="he5_9" class="labelclass">{{T0474}}</label>
+                    </div>
                 </div>
             </div>
 
